# GIAIC-Hackathons

./: CNAME  LICENSE  README.md
Evolution-of-Todo/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE.md.phase1_backup  DATABASE_SETUP_SUMMARY.md  DEPLOYMENT-READY-STATUS.md  DEPLOYMENT-SUCCESS-REPORT.md  PHASE3_STATUS_REPORT.md  PHASE_3_RETROSPECTIVE.md  README.md  SESSION_RESTART_STATUS_REPORT.md  VERCEL-DEPLOYMENT-PREP.md  docker-compose.yml  openapi-temp.json  pyproject.toml  task_analysis_report.md  test_chatkit_e2e.py  vercel.json
Evolution-of-Todo/.claude/: settings.local.json
Evolution-of-Todo/.claude.session_backup/: settings.local.json
Evolution-of-Todo/.spec-kit/: config.yaml
Evolution-of-Todo/ai-control/: CLAUDE.md  CODEX.md  GEMINI.md  LOOP.md  MCP.md  QUALITY_REASSESSMENT.md  README.md  REGISTRY.md  SKILLS.md  SWARM.md
Evolution-of-Todo/docs/: database-quick-reference.md  database-setup.md
Evolution-of-Todo/phase-1-console/: CLAUDE.md  pyproject.toml
Evolution-of-Todo/phase-2-web/: .env.example  DEPLOYMENT-AUTOMATION-SUMMARY.md  DEPLOYMENT.md  FRONTEND-TEST-REPORT.md  QUICK-START.md  README.md  VERCEL-AUTOMATION-GUIDE.md  deploy-to-vercel.ps1  deploy-to-vercel.sh  docker-compose.yml
Evolution-of-Todo/phase-3-chatbot/: .env.example  BACKEND-TEST-REPORT.md  DEPLOYMENT-FILES-README.md  VERCEL-DEBUG.md  phase-3-acceptance-report.md  phase-3-completion.md  test_user.json  tmpclaude-42e0-cwd
Evolution-of-Todo/reports/: E2E_COMPREHENSIVE_STATUS_2026-02-07.md  E2E_FINAL_CERTIFICATION_2026-02-07.md  E2E_PHASE1_ENVIRONMENT_VALIDATION_2026-02-07.md  E2E_PHASE2_BACKEND_API_TESTING_2026-02-07.md  ENVIRONMENT_UPDATE_REPORT.md  PRODUCTION_READINESS.md  README.md  SECURITY_AUDIT_SUMMARY.md  UI_ACTIONABLE_FIXES.md  UI_EXECUTIVE_SUMMARY.md  UI_TEST_REPORT_2026-02-07.md  UI_VISUAL_ASSESSMENT.md  backend-api-test-report.md  backend-test-summary.md  credential-rotation-clearance-2026-02-08.md  enterprise-security-audit-2026-02-07.md  http500-root-cause-analysis.md  security-scan-2026-02-08.md  ui-page-inventory.md  ui-testing-report-2026-02-07.md  ui-testing-summary.md
Evolution-of-Todo/scripts/: README.md  _common.sh  clean-caches.sh  dev-env-setup.sh  (+11 more)
Personal-AI-Employee-Hackathon-0/: .coveragerc  .gitignore  .mcp.json.example  CLAUDE.md  H0-MIND-MAP.md  Hackathon-0.txt  Personal-AI-Employee-Hackathon-0-Rough-Planning.txt  live_run.py  pyproject.toml  requirements.txt  smoke_test.py  verify_bronze_exit.py
(+730 files in other folders)
